Closed Bug 331671 Opened 20 years ago Closed 20 years ago

ICO decoder doesn't handle alpha (transparency) properly (images wrongly drawn with black backgrounds)

Categories

(Core :: Graphics, defect)

x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: ria.klaassen, Assigned: dbaron)

References

Details

(Keywords: regression, Whiteboard: cairo)

Attachments

(2 files)

Some icons have a black background. I see some icons of the type .png without black background so maybe .ico icons are not displayed properly?
Whiteboard: cairo
Attached image screenshot
Regression between 1.9a1_2006032412 and 1.9a1_2006032421.
Confirmed. see favicon of http://www.mozilla.com/ landing of #331298 [Core:GFX: Thebes]-Speed up image drawing/decoding [Win] looks like a good culprit Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060325 Firefox/1.6a1 ID:2006032505
will fix shortly.
Assignee: nobody → pavlov
Status: NEW → ASSIGNED
Keywords: regression
Summary: Icons with black background → ICO decoder doesn't handle alpha properly
*** Bug 331941 has been marked as a duplicate of this bug. ***
Adding to the Summary, so that people who aren't graphics experts can still find it in Bugzilla ;)
Summary: ICO decoder doesn't handle alpha properly → ICO decoder doesn't handle alpha properly (images wrongly drawn with black backgrounds)
*** Bug 331994 has been marked as a duplicate of this bug. ***
I have also noticed that while some images are loading, the parts that have not yet be rendered show up as black. Is this related or should I file a seperate bug report?
(In reply to comment #8) > I have also noticed that while some images are loading, the parts that have not > yet be rendered show up as black. Is this related or should I file a seperate > bug report? > That is bug 326672.
Flags: blocking1.9a1?
*** Bug 332508 has been marked as a duplicate of this bug. ***
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060407 Firefox/3.0a1 I see this on Linux.
OS: Windows XP → All
*** Bug 333255 has been marked as a duplicate of this bug. ***
Component: GFX: Thebes → ImageLib
Summary: ICO decoder doesn't handle alpha properly (images wrongly drawn with black backgrounds) → [cairo] ICO decoder doesn't handle alpha properly (images wrongly drawn with black backgrounds)
Component: ImageLib → GFX: Thebes
Summary: [cairo] ICO decoder doesn't handle alpha properly (images wrongly drawn with black backgrounds) → ICO decoder doesn't handle alpha properly (images wrongly drawn with black backgrounds)
Summary: ICO decoder doesn't handle alpha properly (images wrongly drawn with black backgrounds) → ICO decoder doesn't handle alpha (transparency) properly (images wrongly drawn with black backgrounds)
*** Bug 333367 has been marked as a duplicate of this bug. ***
*** Bug 333768 has been marked as a duplicate of this bug. ***
Attached patch patchSplinter Review
Not sure if this fits with Stuart's plans, but this annoyed me enough to fix it. This doesn't ifdef out all of the code that's no longer needed; just some of it.
This still happens in the latest minefeeld: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060413 Firefox/3.0a1
Comment on attachment 218253 [details] [diff] [review] patch lets get this in
Attachment #218253 - Flags: review+
*** Bug 334131 has been marked as a duplicate of this bug. ***
Assignee: pavlov → dbaron
Status: ASSIGNED → NEW
Checked in to trunk.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
WFM using the latest "auenf" build of FF3.0a which uses CAIRO. Marking "verified fixed".
Status: RESOLVED → VERIFIED
*** Bug 334172 has been marked as a duplicate of this bug. ***
Something still isn't right. I filed bug 335108, "ICO alpha handling still isn't quite right: gray tab background treated as pink background".
Flags: blocking1.9a1?
some problems fixed such as bug 332508 which is duplicate of this bug but some cases such as the following image, still has a black background: http://www.techno.co.il/images/avatars/Cartoon/1739.gif
Both this bug and bug 322508 are about ICO images; that's a GIF, so a different bug.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: