Handle alpha in the MOZ_CAIRO_GFX codepath, and stop doing *some* of the work that's no longer needed in that codepath.  b=331671  r=pavlov